--- a/HomePage.html
+++ b/HomePage.html
@@ -10,7 +10,10 @@
     
 </head>
 
-<body>
+<body >
+ 
+
+
 <div id = 'bg'>
 
     <div id = 'D1'>
@@ -40,8 +43,10 @@
     <div id = "D2">
 
         <div class=D2d>
-
+            <a href="./PlayerPage.html">
             <button class="D2b">Start The Game</button>
+             </a>
+            
 
         </div>
 
