--- a/XOPage.html
+++ b/XOPage.html
@@ -68,6 +68,8 @@
 
             <h1 id = "bg3D1d1h1">Player 1</h1>
 
+            <div id = "pl1lig">    </div>
+
            
             <div  type = button  id = "bg3dpl1" onclick="changeplayer()"></div>
           
@@ -96,6 +98,8 @@
          <div id="bg3D1d2"> 
 
            <h1 id = "bg3D1d1h2">Player 2</h1>
+
+           <div id = "pl2lig">    </div>
 
 
             <div type = button id = "bg3dpl2"  onclick="changeplayer()" ></div>
