--- a/PlayerPage.html
+++ b/PlayerPage.html
@@ -17,6 +17,18 @@
   </head>
 
   <body>
+
+    <div class = 'loader_bg'>
+      <div class = 'loader'></div>
+
+
+
+
+    </div>
+
+
+
+
     
     <div id="bg">
         <div id="player1">
@@ -120,5 +132,14 @@
 
     </div>
     <script src="./C23_OmarProject.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+ <script>
+     setTimeout(function(){
+         $('.loader_bg').fadeToggle();
+     } , 800 )
+ </script>
+
+
   </body>
 </html>
