--- a/HomePage.html
+++ b/HomePage.html
@@ -12,6 +12,15 @@
 
 <body >
 
+
+    <div class = 'loader_bg'>
+      <div class = 'loader'></div>
+
+
+
+
+    </div>
+
  
 
 
@@ -105,6 +114,12 @@
 
  <script src="./C23_OmarProject.js"></script>
 
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+ <script>
+     setTimeout(function(){
+         $('.loader_bg').fadeToggle();
+     } , 800 )
+ </script>
 
 
 </body>
